# arno

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.adoc  README.md  boot.S  build.rs  build.zig  build.zig.zon  cpu.zig  crt0.c  crt0.h  entry.S  gdb.txt  kernel.c  linker.ld  main.zig  resources.adoc  str.zig  tty.c  tty.h  tty.zig
.cargo/: config.toml
cpp-riscv/: entry.S  kernel.ld  start.c
docs/: attribute-arch.adoc  code-model.adoc  disabling-the-c-extension.adoc  entrypoint.adoc  environment.adoc  gp-relaxation.adoc  interupt-delegation.adoc  memory-layout.adoc  physical-memory-protection.adoc  platform-level-interrupt-controller.adoc  resources.adoc  riscv-kernel-docs.adoc  riscv-kernel.adoc  uart.adoc
primitives/riscv-cpu/: ALU.v
primitives/riscv-cpu/typescript/: bun.lockb  index.ts  package.json
primitives/riscv-cpu/verilog/: ALU.v
primitives/riscv-emulator/: Cargo.toml
primitives/riscv-emulator/src/: main.rs
primitives/xv6-riscv/: Cargo.toml  README.md
primitives/xv6-riscv/.cargo/: config.toml
primitives/xv6-riscv/src/: console.rs  modes.rs  registers.rs  start.rs
primitives/xv6-riscv/src/asm/: entry.S
primitives/xv6-riscv/src/registers/: medeleg.rs  mepc.rs  mhartid.rs  mideleg.rs  mod.rs  mstatus.rs  pmp.rs  satp.rs  sie.rs  tp.rs
src/: console.rs  cpu.rs  main.rs  mmio.rs  registers.rs  start.rs
src/asm/: entry.S  machine.S
