[package]
name = "arno"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arno"
test = false
bench = false

[profile.dev]
# Language items are special functions and types that are required internally by the compiler.
# For example, the Copy trait is a language item that tells the compiler which types have copy
# semantics.
# The eh_personality language item marks a function that is used for implementing stack unwinding.
# By default, Rust uses unwinding to run the destructors of all live stack variables in case of a
# panic. This ensures that all used memory is freed and allows the parent thread to catch the panic
# and continue execution. Unwinding, however, is a complicated process and requires some OS-specific
# libraries (e.g. libunwind on Linux or structured exception handling on Windows), so we'll just
# disable it.
# NOTE : This disables the generation of unwinding symbol information and thus considerably reduces
# binary size.
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
